--- a/website/styles.css
+++ b/website/styles.css
@@ -37,13 +37,16 @@ img {
     border: 1px solid #eeeeee;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 15px;
-    flex: 2;
     margin: 5px;
     /* display: inline-block; */
 }
 
-#files {
+.row {
     display: flex;
+}
+
+.row div {
+    flex: 2;
 }
 
 #about-content {
